--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 <head>
   <title> Swimming set maker </title>
- </head>
+  <style>
+    button {
+      color:blue;
+      background-color:white;
+    }
+</head>
 <body>
+  <h1> Swimming set generator <h1>
+  <button> create swimming set</button>
 </body>
 </html>
