--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title> Swimming set maker </title>
   <style>
+    h1 {
+      text-align:center;
     button {
       color:blue;
       background-color:white;
