--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   </style>
 </head>
 <body>
+  <script>
+    function click() {
+      set_length = prompt("What is the length of the set")
+    }
+   </script>
   <h1> Swimming set generator <h1>
-  <button> create swimming set</button>
+  <button onclick="click()"> create swimming set </button>
 </body>
 </html>
