--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     function click() {
       set_length = prompt("What is the length of the set")
     }
-   </script>
-  <h1> Swimming set generator <h1>
+  </script>
+  <h1> Swimming set generator </h1>
   <button onclick="click()"> create swimming set </button>
 </body>
 </html>
