--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title> Swimming set maker </title>
   <style>
-    h1 {
+    #first {
       text-align:center;
     button {
       color:blue;
@@ -17,7 +17,9 @@
       set_length = prompt("What is the length of the set")
     }
   </script>
-  <h1> Swimming set generator </h1>
-  <button onclick="click()"> create swimming set </button>
+  <div id="first">
+    <h1> Swimming set generator </h1>
+    <button onclick="click()"> create swimming set </button>
+  </div>
 </body>
 </html>
