--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!Doctype html>
 <html>
-<head>
+<head lang="en">
   <title> Swimming set maker </title>
   <style>
-    #first {
+    .first {
       text-align:center;
     button {
       color:blue;
@@ -17,9 +17,7 @@
       set_length = prompt("What is the length of the set")
     }
   </script>
-  <div id="first">
-    <h1> Swimming set generator </h1>
-    <button onclick="click()"> create swimming set </button>
-  </div>
+  <h1 class="first"> Swimming set generator </h1>
+  <button class="first" onclick="click()"> create swimming set </button>
 </body>
 </html>
