--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <style>
     .first {
       text-align:center;
+    }
     button {
       color:blue;
       background-color:white;
@@ -17,7 +18,9 @@
       set_length = prompt("What is the length of the set")
     }
   </script>
-  <h1 class="first"> Swimming set generator </h1>
-  <button class="first" onclick="click()"> create swimming set </button>
+  <div class="first">
+    <h1> Swimming set generator </h1>
+    <button onclick="click()"> create swimming set </button>
+  </div>
 </body>
 </html>
