--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
   <title> Swimming set maker </title>
   <style>
     .first {
@@ -14,13 +14,14 @@
 </head>
 <body>
   <script>
-    function click() {
-      set_length = prompt("What is the length of the set")
+    function start() {
+      set_length = prompt('What is the length of the set')
     }
+    
   </script>
   <div class="first">
     <h1> Swimming set generator </h1>
-    <button onclick="click()"> create swimming set </button>
+    <button onclick="start()"> create swimming set </button>
   </div>
 </body>
 </html>
