--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
   <script>
     function start() {
       set_length = prompt('What is the length of the set')
+      test_length = set_length
+      getElementById("text") += ((3+Math.floor(Math.random()))*50).tostring() + "warm up"
     }
     
   </script>
   <div class="first">
     <h1> Swimming set generator </h1>
     <button onclick="start()"> create swimming set </button>
+  </div>
+  <div id="text">
+    
   </div>
 </body>
 </html>
