--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     function start() {
       set_length = prompt('What is the length of the set')
       test_length = set_length
-      getElementById("text") += ((3+Math.floor(Math.random()))*50).tostring() + "warm up"
+      getElementById("text").innertext += ((3+Math.floor(Math.random()))*50).tostring() + "warm up"
     }
     
   </script>
