--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     function start() {
       set_length = prompt('What is the length of the set')
       test_length = set_length
-      getElementById("text").innertext += ((3+Math.floor(Math.random()))*50).tostring() + "warm up"
+      getElementById("text").innertext += '\n'+((3+Math.floor(Math.random()))*50).tostring() + "warm up"
     }
     
   </script>
@@ -25,8 +25,6 @@
     <h1> Swimming set generator </h1>
     <button onclick="start()"> create swimming set </button>
   </div>
-  <div id="text">
-    
-  </div>
+  <p id="text">Swimming set: </p>
 </body>
 </html>
