--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title> Swimming set maker </title>
   <style>
+    body {
+      background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
+    }
     .first {
       text-align:center;
     }
