--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title> Swimming set maker </title>
   <style>
     body {
-   
+      background-repeat: no-repeat;
+      background-position: top;
       background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
     }
     .first {
@@ -12,7 +13,7 @@
     }
     button {
       width:100px;
-      padding:10px
+      padding:10px;
       color:blue;
       background-color:white;
     }
