--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       color:blue;
       background-color:white;
     }
+    #text {
+      text-align:center;
+    }
   </style>
 </head>
 <body>
