--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     }
     #text {
       text-align:center;
+      overflow:auto;
     }
   </style>
 </head>
@@ -34,7 +35,7 @@
   <div class="first">
     <h1> Swimming set generator </h1>
     <button onclick="start()"> create swimming set </button>
-  </div>
-  <p id="text">Swimming set: </p>
+    </div>
+    <p id="text">Swimming set: </p>
 </body>
 </html>
