--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     body {
       background-repeat: no-repeat;
       background-position: top;
-      overflow:auto;
+      
       background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
     }
     .first {
+      width:100px;
+      height:130px;
+      margin:0;
+      overflow:auto;
       text-align:center;
     }
     button {
