--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     function start() {
       set_length = prompt('What is the length of the set')
       test_length = set_length
-      document.getElementById("text").innerText += '\n'+((3+Math.round(Math.random()))*50).toString() + "warm up"
+      warm_up = 3+Math.round(Math.random()))*50
+      document.getElementById("text").innerText += '\n'+((warm_up).toString() + "warm up"
+      test_length = test_length-warm_up
     }
     
   </script>
