--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <h1> Swimming set generator </h1>
     <button onclick="start()"> create swimming set </button>
     </div>
-    <p id="text">Swimming set: </p>
+    <p id="text">Your set: </p>
 </body>
 </html>
