--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     function start() {
       set_length = prompt('What is the length of the set')
       test_length = set_length
-      warm_up = 3+Math.round(Math.random()))*50
+      warm_up = 3+Math.round(Math.random())*50
       document.getElementById("text").innerText += '\n'+warm_up.toString() + "warm up"
       test_length = test_length-warm_up
     }
