--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       background-color:white;
     }
     #text {
+      width:100px;
+      height:126px;
       overflow:auto;
       text-align:center;
       
