--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       background-color:white;
     }
     #text {
+      padding: 0px 0px 0px 300px;
       width:100px;
       height:126px;
       overflow:auto;
