--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       warm_up = (3+Math.round(Math.random()))*50
       document.getElementById("text").innerText += '\n'+warm_up.toString() + "warm up"
       test_length = test_length-warm_up
+      document.getElementById("text").innerText += '\nkick'
     }
     
   </script>
