--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       background-color:white;
     }
     #text {
-      padding: 0px 0px 0px 500px;
+      background-color:white;
+      padding: 0px 0px 0px 800px;
       width:100px;
       height:126px;
       overflow:auto;
