--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <script>
     function start() {
-      set_length = prompt('What is the length of the set')
+      set_length = prompt('What is the length of the set(minimum of 400)')
       test_length = set_length
       warm_up = (3+Math.round(Math.random()))*50
       document.getElementById("text").innerText += '\n'+warm_up.toString() + "warm up"
