--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     }
     #text {
       background-color:white;
-      padding: 0px 0px 0px 800px;
-      width:50px;
+      background-clip: content-box;
+      width:100px;
       height:126px;
       overflow:auto;
       text-align:center;
+      margin-left: auto;
+      margin-right: auto;
       
     }
   </style>
