--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
   <script>
     function start() {
+      document.getElementById("text").innerText = 'Your set:'
       set_length = prompt('What is the length of the set(minimum of 400)')
       test_length = set_length
       warm_up = (3+Math.round(Math.random()))*50
