--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       test_length = test_length-warm_up
       document.getElementById("text").innerText += '\n 200 kick'
       test_length = test_length-200
+      if (test_length > 0) {
+        document.getElementById("text").innerText += test_length.toString()+'\n cool down'
+      }
     }
     
   </script>
