--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       document.getElementById("text").innerText += '\n 200 kick'
       test_length = test_length-200
       if (test_length > 0) {
-        document.getElementById("text").innerText += test_length.toString()+'\n cool down'
+        document.getElementById("text").innerText += '\n'+test_length.toString()+' cool down'
       }
     }
     
