--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       background-repeat: no-repeat;
       background-position: top;
-      
+      background-color: #0078DC;
       background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
     }
     .first {
@@ -30,6 +30,15 @@
       margin-right: auto;
       
     }
+    .decorated {
+      background-color:blue;
+      float:left;
+      clear:left;
+    }
+    .next_to {
+      background-color:blue;
+      float:left;
+    }
   </style>
 </head>
 <body>
@@ -39,7 +48,7 @@
       set_length = prompt('What is the length of the set(minimum of 400)')
       test_length = set_length
       warm_up = (3+Math.round(Math.random()))*50
-      document.getElementById("text").innerText += '\n'+warm_up.toString() + "warm up"
+      document.getElementById("text").innerText += '\n'+warm_up.toString() + " warm up"
       test_length = test_length-warm_up
       document.getElementById("text").innerText += '\n 200 kick'
       test_length = test_length-200
@@ -53,6 +62,9 @@
     <h1> Swimming set generator </h1>
     <button onclick="start()"> create swimming set </button>
     </div>
-    <p id="text">Your set: </p>
+  <p id="text">Your set: </p>
+  <h2> Drills used </h2>
+  <p class="decorated"> fist drill </p>
+  <p class="next_to"> zipper drill </p>
 </body>
 </html>
