--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       
     }
     .decorated {
+      height:50px;
+      width:100px
       background-color:blue;
       float:left;
       clear:left;
@@ -41,7 +43,8 @@
     .next_to {
       background-color:blue;
       float:left;
-      margin: 50px;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 </head>
