--- a/index.html
+++ b/index.html
@@ -34,17 +34,23 @@
     }
     .decorated {
       height:50px;
-      width:100px
+      width:100px;
       background-color:blue;
       float:left;
       clear:left;
       margin: 50px;
     }
     .next_to {
+      height:50px;
+      width:100px;
       background-color:blue;
       float:left;
+      
+    }
+    h2 {
       margin-left: auto;
       margin-right: auto;
+      text_align: center;
     }
   </style>
 </head>
@@ -70,8 +76,11 @@
     <button onclick="start()"> create swimming set </button>
     </div>
   <p id="text">Your set: </p>
-  <h2 style="text_align: center"> Drills used </h2>
+  <h2> Drills used </h2>
   <p class="decorated"> fist drill </p>
   <p class="next_to"> zipper drill </p>
+  <p class="next_to"> head up drill </p>
+  <p class="next_to"> drag finger tips drill </p>
+  <p class="next_to"> with fins drill </p>
 </body>
 </html>
