--- a/index.html
+++ b/index.html
@@ -32,19 +32,15 @@
       margin-right: auto;
       
     }
-    .decorated {
-      height:50px;
-      width:100px;
-      background-color:blue;
-      float:left;
-      clear:left;
-      margin: 50px;
-    }
+   
     .next_to {
       height:50px;
       width:100px;
       background-color:blue;
       float:left;
+      border: 20px;
+      border-style: solid;
+      border-color: rgb(0,0,0)
       
     }
     h2 {
@@ -77,7 +73,7 @@
     </div>
   <p id="text">Your set: </p>
   <h2> Drills used </h2>
-  <p class="decorated"> fist drill </p>
+  <p class="next_to"> fist drill </p>
   <p class="next_to"> zipper drill </p>
   <p class="next_to"> head up drill </p>
   <p class="next_to"> drag finger tips drill </p>
