--- a/index.html
+++ b/index.html
@@ -78,5 +78,11 @@
   <p class="next_to"> head up drill </p>
   <p class="next_to"> drag finger tips drill </p>
   <p class="next_to"> with fins drill </p>
+  </br>
+  <p class="next_to"> 1 hand butterfly drill </p>
+  <p class="next_to"> 2-2-2 drill </p>
+  <p class="next_to"> freestyle kick and butterfly hand drill </p>
+  <p class="next_to"> with buoy drill </p>
+  <p class="next_to"> butterfly fist drill </p>
 </body>
 </html>
