--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
   <p class="next_to"> fist drill </p>
   <p class="next_to shift_small"> zipper drill </p>
   <p class="next_to"> head up drill </p>
-  <p class="next_to shift_small"> drag finger tips drill </p>
-  <p class="next_to shift_big"> with fins drill </p>
+  <p class="next_to shift_small shift_big"> drag finger tips drill </p>
+  <p class="next_to "> with fins drill </p>
   <p class="next_to shift_small"> 1 hand butterfly drill </p>
   <p class="next_to"> 2-2-2 drill </p>
   <p class="next_to shift_small"> freestyle kick and butterfly hand drill </p>
