--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           }
         }
 	if (test_length > 0) {
-      		document.getElementById("text").innerText += '\n'+test_length.toString()+' cool down';
+      		document.getElementById("text").innerText += '\n'+test_length*100.toString()+' cool down';
 	}
             
 	
