--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       background-color:white;
     }
     #text {
+      position:relative;
+      bottom:-300px;
       background-color:white;
       width:200px;
-      height:126px;
+      height:200px;
       overflow:auto;
       text-align:center;
       margin-left: auto;
