--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       background-repeat: no-repeat;
       background-position: top;
       background-color: #0078DC;
+      background-size: 1200px;
       background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
     }
     .first {
@@ -23,11 +24,10 @@
       background-color:white;
     }
     #text {
-      position:relative;
-      bottom:-300px;
+
       background-color:white;
       width:200px;
-      height:200px;
+      height:160px;
       overflow:auto;
       text-align:center;
       margin-left: auto;
@@ -136,6 +136,5 @@
   <p class="next_to shift_small"> butterfly fist drill </p>
 </body>
 </html>
-
 
 
