--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width initial-scale=1"/>
   <title> Swimming set maker </title>
   <style>
     * {
