--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <p class="next_to shift_small shift_big"> 1 hand butterfly drill </p>
   <p class="next_to"> 2-2-2 drill </p>
   <p class="next_to shift_small"> freestyle kick and butterfly hand drill </p>
-  <p class="next_to shift_small"> with buoy drill </p>
+  <p class="next_to"> with buoy drill </p>
   <p class="next_to shift_small"> butterfly fist drill </p>
 </body>
 </html>
