--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
     .shift_big {
       clear:left;
     }
-    @media (min_width: 992px) {
-      .shift_small{
+    @media (max-width: 600px) {
+      .shift_small {
         clear:left;
       }
       .shift_big {
         clear:none;
+        color:yellow;
       }
     }
   </style>
@@ -125,17 +126,15 @@
     </div>
   <p id="text">Your set: </p>
   <h2> Drills used </h2>
-  <p class="next_to"> fist drill </p>
-  <p class="next_to shift_small"> zipper drill </p>
-  <p class="next_to"> head up drill </p>
-  <p class="next_to shift_small"> drag finger tips drill </p>
-  <p class="next_to "> with fins drill </p>
-  <p class="next_to shift_small shift_big"> 1 hand butterfly drill </p>
-  <p class="next_to"> 2-2-2 drill </p>
-  <p class="next_to shift_small"> freestyle kick and butterfly hand drill </p>
-  <p class="next_to"> with buoy drill </p>
-  <p class="next_to shift_small"> butterfly fist drill </p>
+  <p class="next_to shift_small"> fist drill </p>
+  <p class="next_to"> zipper drill </p>
+  <p class="next_to shift_small"> head up drill </p>
+  <p class="next_to"> drag finger tips drill </p>
+  <p class="next_to shift_small"> with fins drill </p>
+  <p class="next_to shift_big"> 1 hand butterfly drill </p>
+  <p class="next_to shift_small"> 2-2-2 drill </p>
+  <p class="next_to"> freestyle kick and butterfly hand drill </p>
+  <p class="next_to shift_small"> with buoy drill </p>
+  <p class="next_to"> butterfly fist drill </p>
 </body>
 </html>
-
-
