--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
     #text {
 
       background-color:white;
-      width:180px;
-      height:180px;
+      width:250px;
+      height:200px;
       overflow:auto;
       text-align:center;
       margin-left: auto;
       margin-right: auto;
       
+    }
+    #text:hover{
+	    height:400px;
     }
    
     .next_to {
