--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
   <script>
     function start() {
-      fast_swims = ["100 free","100 fly","100 breast","100 back","100 IM","100 Frim"]
+      fast_swims = ["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"]
       drills = ["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","butterfly kick breast arms"];
       document.getElementById("text").innerText = 'Your set:';
       set_length = prompt('What is the length of the set(minimum of 400)');
@@ -103,7 +103,7 @@
           }
         }
 	if (test_length > 0){
-		total_of = [0,0,0,0,0,0];
+		total_of = [0,0,0,0,0,0,0,0,0];
 		for (let i = 0; i < Math.floor(0.98*(test_length)/100); i++) {
 			rand = Math.round(5*Math.random());
 			total_of[rand] += 1;
