--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
             
           }
         }
-	if (test_length > 0){
+	if (test_length > 200){
 		total_of = [0,0,0,0,0,0,0,0,0];
-		for (let i = 0; i < Math.floor(0.98*(test_length)/100); i++) {
+		for (let i = 0; i < Math.floor(test_length/100-1); i++) {
 			rand = Math.round(5*Math.random());
 			total_of[rand] += 1;
             test_length = test_length - 100;
             
 		}
 		for (let i = 0; i < 5; i++){
-        	if (total_of[i] > 0){
-				document.getElementById("text").innerText += '\n' + total_of[i] + 'x' + fast_swims[i];
+        if (total_of[i] > 0){
+		document.getElementById("text").innerText += '\n' + total_of[i] + 'x' + fast_swims[i];
             }
         }
 
