--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       background-size: 2000px;
       background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
     }
+    .drills {
+	    background-color:aqua;
+	    
     .first {
       
       text-align:center;
@@ -134,6 +137,7 @@
     </div>
   <p id="text">Your set: </p>
   <h2> Drills used </h2>
+  <div class="drills">
   <p class="next_to shift_small"> fist drill </p>
   <p class="next_to"> zipper drill </p>
   <p class="next_to shift_small"> head up drill </p>
@@ -144,5 +148,6 @@
   <p class="next_to"> freestyle kick and butterfly hand drill </p>
   <p class="next_to shift_small"> with buoy drill </p>
   <p class="next_to"> butterfly fist drill </p>
+  </div>
 </body>
 </html>
