--- a/index.html
+++ b/index.html
@@ -125,11 +125,14 @@
         }
 	if (test_length > 200){
 		total_of = [0,0,0,0,0,0,0,0,0];
-		for (let i = 0; i < test_length; i+=100) {
+        new_test = test_length;
+		for (let i = 0; i < test_length-200; i+=100) {
 			rand = Math.floor(9*Math.random());
-			total_of[rand] += 1;
-        	test_length = test_length - 100;            
+			total_of[rand] += 1;    
+            new_test = new_test-100
 		}
+        test_length = new_test
+
 		for (let i = 0; i < 9; i++){
         if (total_of[i] > 0){
 		document.getElementById("text").innerText += '\n' + total_of[i] + 'x' + fast_swims[i];
