--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       drills = ["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","butterfly kick breast arms"];
       document.getElementById("text").innerText = 'Your set:';
       set_length = prompt('What is the length of the set(minimum of 400)');
-      type = prompt("do you wan't you (1) improve your spring and endurance or (2) swimming postures.(type the number)")
-      drill_length = type*200
+      type_swim = prompt("do you wan't you (1) improve your spring and endurance or (2) swimming postures.(type the number)")
+      drill_length = type_swim*200
       test_length = set_length;
       warm_up = (3+Math.round(Math.random()))*50;
       document.getElementById("text").innerText += '\n'+warm_up.toString() + " warm up";
