--- a/index.html
+++ b/index.html
@@ -94,13 +94,18 @@
           document.getElementById("text").style.height = "500px";
       }
     }
+    show_drills()
     function start() {
       fast_swims = ["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"]
       drills = ["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","butterfly kick breast arms"];
       document.getElementById("text").innerText = 'Your set:';
       set_length = prompt('What is the length of the set(minimum of 400)');
-      type_swim = prompt("do you want you (1) improve your spring and endurance or (2) swimming postures.(type the number)")
-      drill_length = type_swim*200
+      type_swim = prompt("do you want you (1) improve your spring and endurance or (2) swimming postures or (3) custom ammount of drills.(type the number)")
+      if (type_swim==='3'){
+	      drill_length = prompt("how much?")
+      } else {
+      	drill_length = type_swim*200
+      }
       test_length = set_length;
       warm_up = (3+Math.round(Math.random()))*50;
       document.getElementById("text").innerText += '\n'+warm_up.toString() + " warm up";
