--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       set_length = prompt('What is the length of the set(minimum of 400)');
       type_swim = prompt("do you want you (1) improve your spring and endurance or (2) swimming postures or (3) custom ammount of drills.(type the number)")
       if (type_swim==='3'){
-	      drill_length = prompt("how much laps?")
+	      drill_length = prompt("how much laps?(no more then 11)")*100
       } else {
       	drill_length = type_swim*200
       }
