--- a/index.html
+++ b/index.html
@@ -167,12 +167,14 @@
   <p id="text">Your set: </p>
   <button onclick="show_drills()">show/hide drills</button>
   <div id="drills">
-  	<h2 > Drills used </h2>
+  	<h2> Drills used </h2>
+	<h3> freestyle </h3>
   	<p class="next_to shift_small"> fist drill </p>
   	<p class="next_to"> zipper drill </p>
   	<p class="next_to shift_small"> head up drill </p>
   	<p class="next_to"> drag finger tips drill </p>
   	<p class="next_to shift_small"> with fins drill </p>
+	<h3> butterfly </h3>
   	<p class="next_to shift_big"> 1 hand butterfly drill </p>
   	<p class="next_to shift_small"> 2-2-2 drill </p>
   	<p class="next_to"> freestyle kick and butterfly hand drill </p>
